2008-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/ylwrap: Cope with white space in `PROGRAM' and `pwd`.

	* lib/am/tags.am (ID, TAGS, CTAGS): Make awk scripts portable again.
	(CTAGS): Drop unneeded variable `here'.

2008-01-19  Jim Meyering  <meyering@redhat.com>

	Add lzma compression support.
	* NEWS: Mention it.
	* automake.in (handle_dist): Recognize dist-lzma.
	(make_paragraphs): Map LZMA to dist-lzma.
	* doc/automake.texi (Dist): Add dist-lzma.
	(Options): Likewise.
	* lib/Automake/Options.pm (_process_option_list):
	* lib/am/distdir.am (dist-lzma): New rule.
	(dist dist-all): Add command to create an lzma-compressed tarball.
	(distcheck): Handle lzma-compressed tarballs just like the others.
	* tests/defs.in: Test for lzma, too.
	* tests/lzma.test: New file, based on nogzip.test.
	* tests/Makefile.am (TESTS): Add lzma.test.
	* tests/Makefile.in: Regenerate.
	Suggestion from Karl Berry.

2008-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Backport from master branch:

	2006-12-25  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/install-sh (initialize_posix_glob): New var.
	Use it instead of setting posix_glob inline.
	(posix_glob): Use '?'/''/: instead of ''/yes/no, for convenience.
	(cmpprog, CMPPROG): New vars, since we use cmp rather than the diff
	of Akim's patch.
	Use LC_ALL before invoking 'ls' when we depend on its output format.
	Don't use awk; just use the shell's builtin features.
	Clean up $dsttmp -C detects no installation is needed.
	* tests/defs.in (is_newest): Renamed from is_younger; the new
	name is more accurate.  All uses changed.
	(old_timestamp): New var.
	* tests/instsh2.test: Rewrite to avoid the need for sleeping.

	2006-12-25  Akim Demaille  <akim@epita.fr>

	* lib/install-sh: Implement install-sh -C.
	(This patch is the remaining part of the patch proposed in
	<http://lists.gnu.org/archive/html/automake-patches/2006-10/msg00077.html>.)
	(usage): Document it.
	(copy_on_change): New var.