@@ -286,11 +286,10 @@ case $required in
     aclocaldir='@prefix@/share/aclocal'
     extra_includes=""
     if test -f $aclocaldir/dirlist; then
-       extra_includes=`(tmp_inc=""
-       while read LINE ; do
-	  tmp_inc="$tmp_inc -I $LINE"
-       done
-       echo $tmp_inc) < $aclocaldir/dirlist`
+       extra_includes=`
+       <$aclocaldir/dirlist \
+       sed -ne 's/#.*//;s/[	 ][	 ]*$//g;s/..*/ -I &/p' |
+	 tr -d '\n'`
     else :; fi
 
     libtool_found=no
