@@ -1,3 +1,8 @@
+2008-01-19  Akim Demaille  <akim@lrde.epita.fr>
+
+	Skip comments and empty lines in dirlist in the tests.
+	* defs.in (extra_includes): Skip comments and empty lines in dirlist.
+
 2008-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* lib/ylwrap: Cope with white space in `PROGRAM' and `pwd`.
